Part1/ex1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-server-html-svc
spec:
  type: ClusterIP
  selector:
    app: koa-server-html
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
